[build-system]
requires = ["setuptools==68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cantok"
version = "0.0.11"
authors = [
  { name="Evgeniy Blinov", email="zheni-b@yandex.ru" },
]
description = 'Implementation of the "Cancellation Token" pattern'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Operating System :: OS Independent",
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
]

[project.urls]
'Source' = 'https://github.com/pomponchik/cantok'
'Documentation' = 'http://cantok.readthedocs.io/'
'Tracker' = 'https://github.com/pomponchik/cantok/issues'
